RTOS/timers/build/log/idf_py_stdout_output_118740
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/niks/Documents/github/CDAC-DESD/RTOS/timers/build/bootloader/esp-idf/esptool_py && /home/niks/.espressif/python_env/idf5.0_py3.8_env/bin/python /home/niks/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/niks/Documents/github/CDAC-DESD/RTOS/timers/build/bootloader/bootloader.bin
Bootloader binary size 0x66d0 bytes. 0x930 bytes (8%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/cdacmain.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/cdacmain.c.obj 
/home/niks/.espressif/tools/xtensa-esp32-elf/esp-2022r1-RC1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -Iconfig -I/home/niks/esp/esp-idf/components/newlib/platform_include -I/home/niks/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/niks/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/niks/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/niks/esp/esp-idf/components/freertos/esp_additions/include -I/home/niks/esp/esp-idf/components/esp_hw_support/include -I/home/niks/esp/esp-idf/components/esp_hw_support/include/soc -I/home/niks/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/niks/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/niks/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/niks/esp/esp-idf/components/heap/include -I/home/niks/esp/esp-idf/components/log/include -I/home/niks/esp/esp-idf/components/soc/include -I/home/niks/esp/esp-idf/components/soc/esp32/. -I/home/niks/esp/esp-idf/components/soc/esp32/include -I/home/niks/esp/esp-idf/components/hal/esp32/include -I/home/niks/esp/esp-idf/components/hal/include -I/home/niks/esp/esp-idf/components/hal/platform_port/include -I/home/niks/esp/esp-idf/components/esp_rom/include -I/home/niks/esp/esp-idf/components/esp_rom/include/esp32 -I/home/niks/esp/esp-idf/components/esp_rom/esp32 -I/home/niks/esp/esp-idf/components/esp_common/include -I/home/niks/esp/esp-idf/components/esp_system/include -I/home/niks/esp/esp-idf/components/esp_system/port/soc -I/home/niks/esp/esp-idf/components/esp_system/port/include/private -I/home/niks/esp/esp-idf/components/xtensa/include -I/home/niks/esp/esp-idf/components/xtensa/esp32/include -I/home/niks/esp/esp-idf/components/lwip/include -I/home/niks/esp/esp-idf/components/lwip/include/apps -I/home/niks/esp/esp-idf/components/lwip/include/apps/sntp -I/home/niks/esp/esp-idf/components/lwip/lwip/src/include -I/home/niks/esp/esp-idf/components/lwip/port/esp32/include -I/home/niks/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/niks/esp/esp-idf/components/esp_ringbuf/include -I/home/niks/esp/esp-idf/components/efuse/include -I/home/niks/esp/esp-idf/components/efuse/esp32/include -I/home/niks/esp/esp-idf/components/driver/include -I/home/niks/esp/esp-idf/components/driver/deprecated -I/home/niks/esp/esp-idf/components/driver/esp32/include -I/home/niks/esp/esp-idf/components/esp_pm/include -I/home/niks/esp/esp-idf/components/mbedtls/port/include -I/home/niks/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/niks/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/niks/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/niks/esp/esp-idf/components/app_update/include -I/home/niks/esp/esp-idf/components/spi_flash/include -I/home/niks/esp/esp-idf/components/bootloader_support/include -I/home/niks/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/niks/esp/esp-idf/components/pthread/include -I/home/niks/esp/esp-idf/components/esp_timer/include -I/home/niks/esp/esp-idf/components/app_trace/include -I/home/niks/esp/esp-idf/components/esp_event/include -I/home/niks/esp/esp-idf/components/nvs_flash/include -I/home/niks/esp/esp-idf/components/esp_phy/include -I/home/niks/esp/esp-idf/components/esp_phy/esp32/include -I/home/niks/esp/esp-idf/components/vfs/include -I/home/niks/esp/esp-idf/components/esp_netif/include -I/home/niks/esp/esp-idf/components/wpa_supplicant/include -I/home/niks/esp/esp-idf/components/wpa_supplicant/port/include -I/home/niks/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/home/niks/esp/esp-idf/components/esp_wifi/include -I/home/niks/esp/esp-idf/components/unity/include -I/home/niks/esp/esp-idf/components/unity/unity/src -I/home/niks/esp/esp-idf/components/cmock/CMock/src -I/home/niks/esp/esp-idf/components/console -I/home/niks/esp/esp-idf/components/http_parser -I/home/niks/esp/esp-idf/components/esp-tls -I/home/niks/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/niks/esp/esp-idf/components/esp_adc/include -I/home/niks/esp/esp-idf/components/esp_adc/interface -I/home/niks/esp/esp-idf/components/esp_adc/esp32/include -I/home/niks/esp/esp-idf/components/esp_adc/deprecated/include -I/home/niks/esp/esp-idf/components/esp_eth/include -I/home/niks/esp/esp-idf/components/esp_gdbstub/include -I/home/niks/esp/esp-idf/components/esp_gdbstub/xtensa -I/home/niks/esp/esp-idf/components/esp_gdbstub/esp32 -I/home/niks/esp/esp-idf/components/esp_hid/include -I/home/niks/esp/esp-idf/components/tcp_transport/include -I/home/niks/esp/esp-idf/components/esp_http_client/include -I/home/niks/esp/esp-idf/components/esp_http_server/include -I/home/niks/esp/esp-idf/components/esp_https_ota/include -I/home/niks/esp/esp-idf/components/esp_lcd/include -I/home/niks/esp/esp-idf/components/esp_lcd/interface -I/home/niks/esp/esp-idf/components/protobuf-c/protobuf-c -I/home/niks/esp/esp-idf/components/protocomm/include/common -I/home/niks/esp/esp-idf/components/protocomm/include/security -I/home/niks/esp/esp-idf/components/protocomm/include/transports -I/home/niks/esp/esp-idf/components/esp_local_ctrl/include -I/home/niks/esp/esp-idf/components/esp_psram/include -I/home/niks/esp/esp-idf/components/sdmmc/include -I/home/niks/esp/esp-idf/components/esp_serial_slave_link/include -I/home/niks/esp/esp-idf/components/espcoredump/include -I/home/niks/esp/esp-idf/components/espcoredump/include/port/xtensa -I/home/niks/esp/esp-idf/components/wear_levelling/include -I/home/niks/esp/esp-idf/components/fatfs/diskio -I/home/niks/esp/esp-idf/components/fatfs/vfs -I/home/niks/esp/esp-idf/components/fatfs/src -I/home/niks/esp/esp-idf/components/idf_test/include -I/home/niks/esp/esp-idf/components/idf_test/include/esp32 -I/home/niks/esp/esp-idf/components/ieee802154/include -I/home/niks/esp/esp-idf/components/json/cJSON -I/home/niks/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/niks/esp/esp-idf/components/perfmon/include -I/home/niks/esp/esp-idf/components/spiffs/include -I/home/niks/esp/esp-idf/components/ulp/ulp_common/include -I/home/niks/esp/esp-idf/components/ulp/ulp_common/include/esp32 -I/home/niks/esp/esp-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/niks/Documents/github/CDAC-DESD/RTOS/timers=. -fmacro-prefix-map=/home/niks/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dev-4723-g30e8f19f5a\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -Wno-format -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/cdacmain.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/cdacmain.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/cdacmain.c.obj   -c ../main/cdacmain.c
../main/cdacmain.c: In function 'serial_task':
../main/cdacmain.c:27:36: error: macro "xTimerStart" requires 2 arguments, but only 1 given
   27 |     xTimerStart(serial_timer_handle);
      |                                    ^
In file included from ../main/cdacmain.c:4:
/home/niks/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/timers.h:514: note: macro "xTimerStart" defined here
  514 | #define xTimerStart( xTimer, xTicksToWait ) \
      | 
../main/cdacmain.c:27:5: error: 'xTimerStart' undeclared (first use in this function)
   27 |     xTimerStart(serial_timer_handle);
      |     ^~~~~~~~~~~
../main/cdacmain.c:27:5: note: each undeclared identifier is reported only once for each function it appears in
../main/cdacmain.c: In function 'app_main':
../main/cdacmain.c:36:16: warning: variable 'res' set but not used [-Wunused-but-set-variable]
   36 |     BaseType_t res;
      |                ^~~
ninja: build stopped: subcommand failed.
